--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "t4g-for-business",
+  "name": "t4business",
   "version": "1.0.0",
   "main": "server.js",
   "description": "T4G for Business - Flutter Web Application",
