--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "build:web": "./heroku_build.sh",
-    "build": "./heroku_build.sh",
+    "heroku-postbuild": "./heroku_build.sh",
     "deploy": "npm run build && firebase deploy --only hosting",
     "deploy:message": "npm run build && firebase deploy --only hosting -m",
     "quick-deploy": "./quick-deploy.sh",
