--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server.js",
     "build:web": "flutter build web --no-tree-shake-icons",
-    "heroku-postbuild": "echo 'Skipping Flutter build on Heroku. Ensure build/web is committed.'",
+    "heroku-postbuild": "chmod +x setup-env.sh && ./setup-env.sh",
     "deploy": "npm run build && firebase deploy --only hosting",
     "deploy:message": "npm run build && firebase deploy --only hosting -m",
     "quick-deploy": "./quick-deploy.sh",
