--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,7 +93,7 @@ flutter:
   assets:
     - assets/logo/
     - assets/images/
-    - .env_config
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
