--- a/firebase.json
+++ b/firebase.json
@@ -1,28 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "t4g-for-business",
-          "configurations": {
-            "web": "1:722144377218:web:e013180dc34c4a46aab79b"
-          }
-        }
-      }
-    }
-  },
-  "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
-}
+{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"trash4business-17c13","configurations":{"web":"1:356198151114:web:b0fae4b3d3426506805533"}}}}},"hosting":{"public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]}}
